nav overlap fixed

--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -5,7 +5,7 @@ nav {
     "quote quote quote";
   grid-auto-columns: 33vw 33vw 33vw;
   background-color: #e6e6e6;
-  height:10vh;
+  min-height:10vh;
   /* position: fixed; */
   top: 0;
   margin: 0;
